# datarevenue-code-challange

./: .gitignore  Pipfile  README.md  README_assignment.md  build-task-images.sh  docker-compose.yml  pyproject.toml
download_data/: Readme.md  download_data.py
evaluate_model/: Dockerfile  Readme.md  evaluate_model.py  pyproject.toml  requirements.txt
make_dataset/: Dockerfile  Readme.md  dataset.py  pyproject.toml
notebooks/: DataExploration.ipynb  EvaluateModel.ipynb
orchestrator/: Dockerfile  task.py
train_model/: Dockerfile  Readme.md  pyproject.toml  train_model.py
