[tool.poetry]
name = "evaluate_model"
version = "0.1.0"
description = ""
authors = ["albertocarot1 <acaroli1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
xgboost = "^1.4.0"
scikit-learn = "^0.24.1"
seaborn = "^0.11.1"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
