[tool.poetry]
name = "make_dataset"
version = "0.1.0"
description = ""
authors = ["albertocarot1 <acaroli1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
scikit-learn = "^0.24.1"
category-encoders = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
